# kuhn-poker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: deploy_pages.yml
contracts/: kuhn.v1.json
contracts/schema/: game_contract.schema.json
docs/: kuhn_rules.md  web_inference_contract.md
kuhn_poker/: __init__.py  constants.py  env.py  onnx_export.py  opponents.py  wrappers.py
scripts/: eval.py  export_onnx.py  generate_contract_bindings.py  play_cli.py  smoke_test.py  train.py
tests/: test_contract_codegen.py  test_env_smoke.py  test_observation_encoding.py  test_onnx_export.py  test_opponents.py  test_rules_contract.py  test_state_machine.py  test_training_wrapper.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/public/models/: kuhn_policy.onnx
web/src/: App.tsx  main.tsx  styles.css
web/src/game/: engine.test.ts  engine.ts  onnx_adapter.test.ts  onnx_adapter.ts  types.ts
